--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "remix vite:build",
     "lint": "eslint .",
     "preview": "vite preview",
     "format": "prettier --write ."
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
+    "remix": "^2.12.1",
     "scss": "^0.2.4"
   },
   "devDependencies": {
